# rdf-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.md  README.md  index.html
doc/: search-index.js
doc/rdf_rs/: index.html  sidebar-items.js  type.Result.html
doc/rdf_rs/error/: enum.Error.html  enum.ErrorType.html  index.html  sidebar-items.js  struct.Error.html
doc/rdf_rs/graph/: index.html  sidebar-items.js  struct.Graph.html
doc/rdf_rs/helper/: fn.get_next_char.html  fn.get_next_char_discard_leading_spaces.html  fn.get_until.html  fn.get_until_discard_leading_spaces.html  index.html  sidebar-items.js
doc/rdf_rs/namespace/: NamespaceStore.t.html  index.html  sidebar-items.js  struct.Namespace.html  struct.NamespaceStore.html
doc/rdf_rs/node/: enum.Node.html  index.html  sidebar-items.js
doc/rdf_rs/reader/: index.html  sidebar-items.js
doc/rdf_rs/specs/: index.html  sidebar-items.js
doc/rdf_rs/triple/: Triple.t.html  TripleSegment.t.html  TripleStore.t.html  enum.TripleSegment.html  index.html  sidebar-items.js  struct.Triple.html  struct.TripleStore.html
doc/rdf_rs/uri/: index.html  (+2 more)
src/: error.rs  graph.rs  helper.rs  lib.rs  namespace.rs  node.rs  triple.rs  uri.rs
src/reader/: input_reader.rs  n_triples_parser.rs  n_triples_reader.rs  rdf_parser.rs  rdf_reader.rs  sparql_parser.rs  turtle_parser.rs  turtle_reader.rs
src/sparql/: pattern.rs  query.rs
src/specs/: rdf_syntax_specs.rs  sparql_specs.rs  turtle_specs.rs  xml_specs.rs
src/vocabulary/: rdf_xml_vocabulary.rs
src/writer/: n_triples_writer.rs  rdf_writer.rs  turtle_writer.rs
(+151 files in other folders)
